internal/gatewayapi/testdata/infra/gateway-with-listener-with-invalid-allowed-namespaces-selector.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1beta1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: Selector
              selector:
                matchExpressions:
                  - key: foo
                    operator: Exists
                    values:
                      - bar
