internal/gatewayapi/testdata/infra/gateway-with-listener-with-invalid-allowed-routes-kind.out.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1beta1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
            kinds:
              - group: gateway.networking.k8s.io
                kind: FooRoute
    status:
      listeners:
        - name: http
          conditions:
            - type: ResolvedRefs
              status: "False"
              reason: InvalidRouteKinds
              message: "Kind is not supported, kind must be HTTPRoute"
            - type: Ready
              status: "False"
              reason: Invalid
              message: Listener is invalid, see other Conditions for details.
infraIR:
  proxy:
    metadata:
      labels:
        gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway-class
    name: envoy-gateway-class
    image: envoyproxy/envoy:v1.23-latest
    listeners:
      - address: ""
