internal/gatewayapi/testdata/infra/gateway-with-listener-with-invalid-tls-configuration-no-certificate-refs.out.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1beta1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: tls
          protocol: HTTPS
          port: 443
          allowedRoutes:
            namespaces:
              from: All
          tls:
            mode: Terminate
    status:
      listeners:
        - name: tls
          supportedKinds:
            - group: gateway.networking.k8s.io
              kind: HTTPRoute
          conditions:
            - type: Ready
              status: "False"
              reason: Invalid
              message: Listener must have exactly 1 TLS certificate ref
infraIR:
  proxy:
    metadata:
      labels:
        gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway-class
    name: envoy-gateway-class
    image: envoyproxy/envoy:v1.23-latest
    listeners:
      - address: ""
