internal/gatewayapi/testdata/infra/gateway-with-listener-with-invalid-tls-configuration-secret-is-not-valid.out.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1beta1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: tls
          protocol: HTTPS
          port: 443
          allowedRoutes:
            namespaces:
              from: All
          tls:
            mode: Terminate
            certificateRefs:
              - name: tls-secret-1
    status:
      listeners:
        - name: tls
          supportedKinds:
            - group: gateway.networking.k8s.io
              kind: HTTPRoute
          conditions:
            - type: ResolvedRefs
              status: "False"
              reason: InvalidCertificateRef
              message: Secret envoy-gateway/tls-secret-1 must contain tls.crt and tls.key.
            - type: Ready
              status: "False"
              reason: Invalid
              message: Listener is invalid, see other Conditions for details.
infraIR:
  proxy:
    metadata:
      labels:
        gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway-class
    name: envoy-gateway-class
    image: envoyproxy/envoy:v1.23-latest
    listeners:
      - address: ""
