internal/gatewayapi/testdata/infra/gateway-with-listener-with-unsupported-protocol.out.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1beta1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: unsupported
          protocol: TCP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
    status:
      listeners:
        - name: unsupported
          conditions:
            - type: Detached
              status: "True"
              reason: UnsupportedProtocol
              message: Protocol TCP is unsupported, must be HTTP or HTTPS.
            - type: Ready
              status: "False"
              reason: Invalid
              message: Listener is invalid, see other Conditions for details.
infraIR:
  proxy:
    metadata:
      labels:
        gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway-class
    name: envoy-gateway-class
    image: envoyproxy/envoy:v1.23-latest
    listeners:
      - address: ""
