internal/gatewayapi/testdata/infra/gateway-with-listener-with-valid-tls-configuration.out.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1beta1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: tls
          protocol: HTTPS
          port: 443
          allowedRoutes:
            namespaces:
              from: All
          tls:
            mode: Terminate
            certificateRefs:
              - name: tls-secret-1
    status:
      listeners:
        - name: tls
          supportedKinds:
            - group: gateway.networking.k8s.io
              kind: HTTPRoute
          conditions:
            - type: Ready
              status: "True"
              reason: Ready
              message: Listener is ready
infraIR:
  proxy:
    metadata:
      labels:
        gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway-class
    name: envoy-gateway-class
    image: envoyproxy/envoy:v1.23-latest
    listeners:
      - address: ""
        ports:
          - name: envoy-gateway-gateway-1
            protocol: "HTTPS"
            servicePort: 443
            containerPort: 10443
