internal/gatewayapi/testdata/infra/gateway-with-two-listeners-with-same-port-and-hostname.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http-1
      protocol: HTTP
      port: 80
      hostname: foo.com
      allowedRoutes:
        namespaces:
          from: All
    - name: http-2
      protocol: HTTP
      port: 80
      hostname: foo.com
      allowedRoutes:
        namespaces:
          from: All
  status:
    listeners:
    - name: http-1
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      conditions:
      - type: Conflicted
        status: "True"
        reason: HostnameConflict
        message: All listeners for a given port must use a unique hostname
      - type: Ready
        status: "False"
        reason: Invalid
        message: Listener is invalid, see other Conditions for details.
    - name: http-2
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      conditions:
      - type: Conflicted
        status: "True"
        reason: HostnameConflict
        message: All listeners for a given port must use a unique hostname
      - type: Ready
        status: "False"
        reason: Invalid
        message: Listener is invalid, see other Conditions for details.
infraIR:
  proxy:
    metadata:
      labels:
        gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway-class
    name: envoy-gateway-class
    image: envoyproxy/envoy:v1.23-latest
    listeners:
    - address: ""
